tests/macros/multi_select/extension.rs
fn main() {
    let q = requestty::questions![MultiSelect { extension: todo!() }];
}
